--- a/06_HelloMVC/src/main/resources/sql/board/boardsql.properties
+++ b/06_HelloMVC/src/main/resources/sql/board/boardsql.properties
@@ -6,4 +6,4 @@ updateBoardReadCount=UPDATE BOARD SET BOARD_READCOUNT = BOARD_READCOUNT + 1 WHER
 
 
 insertBoardComment=INSERT INTO BOARD_COMMENT VALUES (SEQ_BOARD_COMMENT_NO.NEXTVAL, ?, ?, ?, ?, ?, DEFAULT)
-selectBoardComment=SELECT * FROM BOARD_COMMENT WHERE BOARD_REF = ?
+selectBoardComment=SELECT * FROM BOARD_COMMENT WHERE BOARD_REF = ? START WITH BOARD_COMMENT_LEVEL = 1 CONNECT BY PRIOR BOARD_COMMENT_NO = BOARD_COMMENT_REF
